--- a/Tests/3D Reconstruction/ReadME
+++ b/Tests/3D Reconstruction/ReadME
@@ -1,1 +1,7 @@
+# Multiple Image Stitching
 
+This codebase implements the system described in the paper:
+
+ >    Automatic Panoramic Image Stitching using Invariant Features
+ >    Matthew Brown and David G. Lowe
+ >    [[PDF](http://matthewalunbrown.com/papers/ijcv2007.pdf)] [[Project webpage](http://matthewalunbrown.com/autostitch/autostitch.html)]
