add model 1,2,3 analysis

--- a/gaussBlur_Wilcoxon_analysis.ipynb
+++ b/gaussBlur_Wilcoxon_analysis.ipynb
@@ -28,19 +28,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "level1_ATE = [0.2188,0.3932,0.4133,0.0976,0.2173,0.0899,0.2833,0.4539,0.5241,0.0933,0.1271,0.2195,0.2471,0.2608,0.0936,0.1812,0.3165,0.0622,0.1777,0.2673]\n",
-    "level4_ATE = [0.2385,0.4205,0.4549,0.111,0.2397,0.1117,0.3049,0.4815,0.5536,0.0984,0.1373,0.213,0.285,0.3196,0.1018,0.2048,0.3257,0.0685,0.2126,0.3176]\n",
-    "level7_ATE = [0.2441,0.4297,0.4616,0.1146,0.2458,0.1165,0.3069,0.4808,0.5629,0.1008,0.1422,0.2146,0.2283,0.3274,0.1033,0.2113,0.3286,0.0712,0.2214,0.3331]\n",
-    "level10_ATE = [0.2524,0.4364,0.4505,0.1209,0.2467,0.123,0.3004,0.4651,0.5694,0.1014,0.1426,0.2138,0.2216,0.3364,0.1055,0.2234,0.3311,0.0733,0.2339,0.3566]\n",
-    "level13_ATE = [0.2585,0.4243,0.3973,0.1281,0.2247,0.1279,0.2935,0.4638,0.5734,0.102,0.1459,0.2104,0.205,0.3454,0.1094,0.2412,0.3268,0.0849,0.2435,0.3755]\n",
-    "level15_ATE = [0.2579,0.402,0.3515,0.1333,0.2092,0.1307,0.3002,0.4904,0.5858,0.1083,0.1602,0.2033,0.1929,0.3309,0.1109,0.2501,0.3202,0.0881,0.2416,0.3744]\n",
+    "model1_level1_ATE=[0.6229,0.8279,0.8585 ,0.2278,0.697 ,0.673,2.1734,2.585,2.4082 ,1.9319,4.017,4.1866,6.096,7.097 ,0.7267,1.2513,2.3007 ,0.5614,0.8686,1.8368]\n",
+    "model1_level2_ATE=[0.4864,0.6534,0.7342 ,0.2108,0.629 ,0.6098,2.245,2.8692,2.6602 ,1.73,3.6013,3.5008,5.4074,7.052 ,0.7149,1.209,1.9476 ,0.5005,0.9009,1.5333]\n",
+    "model1_level3_ATE=[0.4506,0.587,0.7009 ,0.2039,0.6019 ,0.5877,2.2633,3.0004,2.7952 ,1.6655,3.4569,3.3569,5.0915,6.9325 ,0.7121,1.2107,1.8585 ,0.4767,0.91,1.4075]\n",
+    "model1_level4_ATE=[0.3842,0.446,0.5698 ,0.1899,0.5528, 0.5498,2.2646,3.1604,2.9663 ,1.5617,3.1785,3.3077,5.0184,6.7472 ,0.7052,1.2034,1.7047 ,0.4376,0.8967,1.1896]\n",
+    "model1_level5_ATE=[0.3124,0.25,0.3596 ,0.1723,0.4894, 0.4977,2.1998,3.2251,3.0609 ,1.4523,2.8133,3.3132,5.1986,6.3257 ,0.7002,1.1994,1.5564 ,0.3971,0.8034,0.9437]\n",
+    "model1_level6_ATE=[0.2899,0.2523,0.3784,0.163,0.4571,0.4653,2.1253,3.195,3.0428,1.4011,2.6349,3.2373,4.9852,5.7669,0.6964,1.1925,1.5193,0.3739,0.7115,0.8665]\n",
     "\n",
-    "level1_RPE_rot = [1.378,1.2284,1.0047,1.145,0.871,0.8991,1.1684,1.032,0.9914,1.0271,0.8946,1.0015,1.1013,1.1463,1.1165,1.3432,1.0027,0.9381,0.9595,0.822]\n",
-    "level4_RPE_rot = [1.4837,1.3045,1.0521,1.1823,0.9144,0.9049,1.2288,1.0888,1.0565,1.07,0.9593,1.0833,1.1591,1.1992,1.1419,1.3757,1.05,0.955,0.9776,0.8529]\n",
-    "level7_RPE_rot = [1.5015,1.3208,1.062,1.1791,0.921,0.9072,1.2442,1.0947,1.064,1.0802,0.9753,1.1013,1.1713,1.2113,1.1466,1.3802,1.0634,0.9601,0.9816,0.8631]\n",
-    "level10_RPE_rot = [1.5132,1.3494,1.0774,1.1807,0.9251,0.9214,1.2745,1.1089,1.0753,1.0985,1.0078,1.1261,1.1899,1.2353,1.1565,1.3874,1.0793,0.9702,0.9912,0.8828]\n",
-    "level13_RPE_rot = [1.5186,1.3904,1.0926,1.2202,0.951,0.9614,1.3168,1.1467,1.1003,1.123,1.0492,1.1613,1.2256,1.2694,1.1717,1.392,1.1049,0.9925,1.1054,0.9139]\n",
-    "level15_RPE_rot = [1.5331,1.408,1.0993,1.2625,0.9824,0.9928,1.3462,1.1706,1.1161,1.1376,1.0695,1.1852,1.2495,1.2977,1.1859,1.3952,1.1092,1.0107,1.0324,0.9322]"
+    "model1_level1_RPE_rot=[6.3138,6.2568,5.693, 5.6559,4.9689, 6.4621,9.2167,5.598,5.1916 ,4.9272,3.853,4.7479,7.4284,5.9272 ,4.5829,6.1138,6.0758 ,4.2366,5.3884,4.4618]\n",
+    "model1_level2_RPE_rot=[6.3811,6.2886,5.729 ,5.7199,5.0068, 6.5179,9.3689,5.6184,5.2387 ,4.9189,3.8606,4.8347,7.4777,5.9876 ,4.6138,6.2369,6.2049 ,4.2983,5.5176,4.5546]\n",
+    "model1_level3_RPE_rot=[6.4094,6.3031,5.7483 ,5.7397,5.0221, 6.5409,9.4018,5.6386,5.2622 ,4.9197,3.8776,4.8859,7.5003,6.0029 ,4.6331,6.2777,6.2481 ,4.3207,5.5673,4.5832]\n",
+    "model1_level4_RPE_rot=[6.474,6.3297,5.7945, 5.7703,5.0471, 6.5743,9.453,5.6843,5.313 ,4.9233,3.9267,4.9769,7.5591,6.0359 ,4.672,6.3646,6.3251 ,4.3647,5.6552,4.649]\n",
+    "model1_level5_RPE_rot=[6.5966,6.3828,5.8637 ,5.8054,5.0816, 6.6215,9.5276,5.7564,5.3973 ,4.9221,4.0022,5.0741,7.6334,6.1065 ,4.7443,6.491,6.4087 ,4.4279,5.7559,4.7397]\n",
+    "model1_level6_RPE_rot=[6.6739,6.4242,5.8981,5.8178,5.096,6.6445,9.552,5.8036,5.4431,4.9259,4.0542,5.1258,7.6577,6.1531,4.79,6.5609,6.4638,4.4711,5.8182,4.7979]\n",
+    "\n",
+    "model2_level1_ATE = [0.2188,0.3932,0.4133,0.0976,0.2173,0.0899,0.2833,0.4539,0.5241,0.0933,0.1271,0.2195,0.2471,0.2608,0.0936,0.1812,0.3165,0.0622,0.1777,0.2673]\n",
+    "model2_level2_ATE = [0.2385,0.4205,0.4549,0.111,0.2397,0.1117,0.3049,0.4815,0.5536,0.0984,0.1373,0.213,0.285,0.3196,0.1018,0.2048,0.3257,0.0685,0.2126,0.3176]\n",
+    "model2_level3_ATE = [0.2441,0.4297,0.4616,0.1146,0.2458,0.1165,0.3069,0.4808,0.5629,0.1008,0.1422,0.2146,0.2283,0.3274,0.1033,0.2113,0.3286,0.0712,0.2214,0.3331]\n",
+    "model2_level4_ATE = [0.2524,0.4364,0.4505,0.1209,0.2467,0.123,0.3004,0.4651,0.5694,0.1014,0.1426,0.2138,0.2216,0.3364,0.1055,0.2234,0.3311,0.0733,0.2339,0.3566]\n",
+    "model2_level5_ATE = [0.2585,0.4243,0.3973,0.1281,0.2247,0.1279,0.2935,0.4638,0.5734,0.102,0.1459,0.2104,0.205,0.3454,0.1094,0.2412,0.3268,0.0849,0.2435,0.3755]\n",
+    "model2_level6_ATE = [0.2579,0.402,0.3515,0.1333,0.2092,0.1307,0.3002,0.4904,0.5858,0.1083,0.1602,0.2033,0.1929,0.3309,0.1109,0.2501,0.3202,0.0881,0.2416,0.3744]\n",
+    "\n",
+    "model2_level1_RPE_rot = [1.378,1.2284,1.0047,1.145,0.871,0.8991,1.1684,1.032,0.9914,1.0271,0.8946,1.0015,1.1013,1.1463,1.1165,1.3432,1.0027,0.9381,0.9595,0.822]\n",
+    "model2_level2_RPE_rot = [1.4837,1.3045,1.0521,1.1823,0.9144,0.9049,1.2288,1.0888,1.0565,1.07,0.9593,1.0833,1.1591,1.1992,1.1419,1.3757,1.05,0.955,0.9776,0.8529]\n",
+    "model2_level3_RPE_rot = [1.5015,1.3208,1.062,1.1791,0.921,0.9072,1.2442,1.0947,1.064,1.0802,0.9753,1.1013,1.1713,1.2113,1.1466,1.3802,1.0634,0.9601,0.9816,0.8631]\n",
+    "model2_level4_RPE_rot = [1.5132,1.3494,1.0774,1.1807,0.9251,0.9214,1.2745,1.1089,1.0753,1.0985,1.0078,1.1261,1.1899,1.2353,1.1565,1.3874,1.0793,0.9702,0.9912,0.8828]\n",
+    "model2_level5_RPE_rot = [1.5186,1.3904,1.0926,1.2202,0.951,0.9614,1.3168,1.1467,1.1003,1.123,1.0492,1.1613,1.2256,1.2694,1.1717,1.392,1.1049,0.9925,1.1054,0.9139]\n",
+    "model2_level6_RPE_rot = [1.5331,1.408,1.0993,1.2625,0.9824,0.9928,1.3462,1.1706,1.1161,1.1376,1.0695,1.1852,1.2495,1.2977,1.1859,1.3952,1.1092,1.0107,1.0324,0.9322]\n",
+    "\n",
+    "model3_level1_ATE = [0.8581,1.2382,1.3742, 0.1723,0.3235, 0.3271,0.506,0.6509,0.7988, 2.6194,4.1672,5.7799,8.2655,10.0951,0.9194,1.2903,1.3051, 0.405,0.6608,1.0995]\n",
+    "model3_level2_ATE = [0.827,1.1735,1.3149, 0.1753,0.3406,0.3286,0.3981,0.8544,0.9274, 2.3611,3.6932,4.9313,5.1611,5.1897, 0.8773,1.1785,1.0629, 0.3699,0.612,1.1731]\n",
+    "model3_level3_ATE = [0.8121,1.1443,1.2722, 0.1767,0.3447, 0.3269,0.3975,0.9437,0.9766, 2.2274,3.554,4.7788,4.8324,4.4997, 0.8739,1.1849,1.0568, 0.3538,0.5932,1.1667]\n",
+    "model3_level4_ATE = [0.7858,1.0854,1.1735, 0.1808,0.3566, 0.321,0.4348,1.0682,1.0235, 1.9555,3.2405,4.514,4.8231,4.3786, 0.8703,1.2293,1.1425 ,0.3243,0.5527,1.1065]\n",
+    "model3_level5_ATE = [0.7162,0.9581,1.0182, 0.1878,0.3767, 0.3087,0.5348,1.1073,1.0009, 1.5268,2.6957,4.104,4.5347,4.2433, 0.8715,1.3377,1.426 ,0.2911,0.4769,0.9054]\n",
+    "model3_level6_ATE = [0.6451,0.8454,0.9121,0.1872,0.3763,0.2996,0.5866,1.0602,0.9518,1.2714,2.3421,3.7411,4.122,4.0841,0.8595,1.3958,1.6232,0.2736,0.4272,0.8025]\n",
+    "\n",
+    "model3_level1_RPE_rot = [6.8724,6.7823,5.5134 ,4.815,4.4359, 5.3094,9.0467,5.0652,5.2043 ,4.2816,5.2726,5.2163,8.231,5.6065 ,4.9976,5.7524,5.2109 ,4.5523,5.6401,5.1896]\n",
+    "model3_level2_RPE_rot = [7.0118,6.8623,5.7262 ,4.8763,4.4568, 5.42,9.2184,5.2001,5.2989 ,4.4195,5.3693,5.3163,8.3877,5.6986, 5.1142,5.8135,5.308 ,4.6212,5.7465,5.32]\n",
+    "model3_level3_RPE_rot = [7.056,6.8823,5.7914 ,4.8969,4.4705, 5.4567,9.2643,5.2453,5.3319,4.4836,5.4033,5.3557,8.4429,5.7319, 5.1501,5.8497,5.3475 ,4.6512,5.7855,5.3665]\n",
+    "model3_level4_RPE_rot = [7.1385,6.9265,5.9096 ,4.9386,4.4993 ,5.5236,9.3302,5.3352,5.3964,4.5941,5.4369,5.4147,8.5384,5.793, 5.2189,5.934,5.4235,4.7119,5.8557,5.4455]\n",
+    "model3_level5_RPE_rot = [7.2403,6.989,6.0575 ,5.0134,4.5483, 5.6171,9.3547,5.4671,5.4858 ,4.7553,5.3726,5.4652,8.6367,5.8893 ,5.3362,6.0935,5.5489 ,4.8192,5.9778,5.5339]\n",
+    "model3_level6_RPE_rot = [7.2874,7.0143,6.1361,5.0681,4.588,5.6698,9.3342,5.5412,5.5369,4.8446,5.292,5.4762,8.6867,5.9555,5.4097,6.2132,5.6129,4.8871,6.0506,5.5934]\n"
    ]
   },
   {
@@ -50,22 +78,23 @@
    "outputs": [],
    "source": [
     "# compare samples\n",
-    "levels_ATE=[level1_ATE,level4_ATE,level7_ATE,level10_ATE,level13_ATE,level15_ATE]\n",
-    "names=[\"Level1\",\"Level4\",\"Level7\",\"Level10\",\"Level13\",\"Level15\"]\n",
-    "levels_RPE_rot=[level1_RPE_rot,level4_RPE_rot,level7_RPE_rot,level10_RPE_rot,level13_RPE_rot,level15_RPE_rot]\n",
+    "levels_ATE=[[model1_level1_ATE,model1_level2_ATE,model1_level3_ATE,model1_level4_ATE,model1_level5_ATE,model1_level6_ATE],[model2_level1_ATE,model2_level2_ATE,model2_level3_ATE,model2_level4_ATE,model2_level5_ATE,model2_level6_ATE],[model3_level1_ATE,model3_level2_ATE,model3_level3_ATE,model3_level4_ATE,model3_level5_ATE,model3_level6_ATE]]\n",
+    "names=[\"I\",\"II\",\"III\",\"IV\",\"V\",\"VI\"]\n",
+    "levels_RPE_rot=[[model1_level1_RPE_rot,model1_level2_RPE_rot,model1_level3_RPE_rot,model1_level4_RPE_rot,model1_level5_RPE_rot,model1_level6_RPE_rot],[model2_level1_RPE_rot,model2_level2_RPE_rot,model2_level3_RPE_rot,model2_level4_RPE_rot,model2_level5_RPE_rot,model2_level6_RPE_rot],[model3_level1_RPE_rot,model3_level2_RPE_rot,model3_level3_RPE_rot,model3_level4_RPE_rot,model3_level5_RPE_rot,model3_level6_RPE_rot]]\n",
     "\n",
-    "p_scores=[]\n",
-    "p_score_rpe=[]\n",
+    "p_scores=[[],[],[]]\n",
+    "p_score_rpe=[[],[],[]]\n",
     "levels=[]\n",
     "\n",
-    "for i in range(0,5):\n",
-    "    for j in range(i+1,6):\n",
-    "        stat, p = mannwhitneyu(levels_ATE[i], levels_ATE[j])\n",
-    "        p_scores.append('{:.3f}'.format(p))\n",
-    "        levels.append(names[i]+\" - \"+names[j])\n",
-    "        \n",
-    "        stat2, p2 = mannwhitneyu(levels_RPE_rot[i], levels_RPE_rot[j])\n",
-    "        p_score_rpe.append('{:.3f}'.format(p2))\n",
+    "for model in range(0,3):\n",
+    "    for i in range(0,5):\n",
+    "        for j in range(i+1,6):\n",
+    "            stat, p = mannwhitneyu(levels_ATE[model][i], levels_ATE[model][j])\n",
+    "            p_scores[model].append('{:.3f}'.format(p))\n",
+    "            levels.append(\"Level\"+names[i]+\" - \"+\"Level\"+names[j])\n",
+    "\n",
+    "            stat2, p2 = mannwhitneyu(levels_RPE_rot[model][i], levels_RPE_rot[model][j])\n",
+    "            p_score_rpe[model].append('{:.3f}'.format(p2))\n",
     "        "
    ]
   },
@@ -78,39 +107,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------------------------------------------------+\n",
-      "|             Wilcoxon Test on GaussBlur            |\n",
-      "+-------------------+-------------+-----------------+\n",
-      "|       Levels      | ATE p-value | RPE rot p-value |\n",
-      "+-------------------+-------------+-----------------+\n",
-      "|  Level1 - Level4  |    0.237    |      0.168      |\n",
-      "|  Level1 - Level7  |    0.245    |      0.128      |\n",
-      "|  Level1 - Level10 |    0.220    |      0.082      |\n",
-      "|  Level1 - Level13 |    0.237    |      0.019      |\n",
-      "|  Level1 - Level15 |    0.271    |      0.010      |\n",
-      "|  Level4 - Level7  |    0.378    |      0.357      |\n",
-      "|  Level4 - Level10 |    0.378    |      0.271      |\n",
-      "|  Level4 - Level13 |    0.399    |      0.099      |\n",
-      "|  Level4 - Level15 |    0.452    |      0.070      |\n",
-      "|  Level7 - Level10 |    0.378    |      0.318      |\n",
-      "|  Level7 - Level13 |    0.484    |      0.131      |\n",
-      "|  Level7 - Level15 |    0.484    |      0.078      |\n",
-      "| Level10 - Level13 |    0.495    |      0.237      |\n",
-      "| Level10 - Level15 |    0.484    |      0.149      |\n",
-      "| Level13 - Level15 |    0.495    |      0.357      |\n",
-      "+-------------------+-------------+-----------------+\n"
+      "+-------------------------------------------------------------------------------------------------------------------+\n",
+      "|                                       Wilcoxon Test on Gaussian Blur Effect                                       |\n",
+      "+----------------------+------------------------------+------------------------------+------------------------------+\n",
+      "|                      |           Model I            |           Model II           |          Model III           |\n",
+      "+----------------------+------------------------------+------------------------------+------------------------------+\n",
+      "|    Effect Levels     |  ATE(mean)[m]  Rot.RPE[deg]  |  ATE(mean)[m]  Rot.RPE[deg]  |  ATE(mean)[m]  Rot.RPE[deg]  |\n",
+      "|                      |    p-value       p-value     |    p-value       p-value     |    p-value       p-value     |\n",
+      "|   LevelI - LevelII   |     0.347         0.388      |     0.237         0.168      |     0.420         0.228      |\n",
+      "|  LevelI - LevelIII   |     0.308         0.368      |     0.245         0.128      |     0.409         0.162      |\n",
+      "|   LevelI - LevelIV   |     0.237         0.280      |     0.220         0.082      |     0.378         0.109      |\n",
+      "|   LevelI - LevelV    |     0.205         0.228      |     0.237         0.019      |     0.409         0.078      |\n",
+      "|   LevelI - LevelVI   |     0.168         0.190      |     0.271         0.010      |     0.290         0.057      |\n",
+      "|  LevelII - LevelIII  |     0.388         0.378      |     0.378         0.357      |     0.430         0.308      |\n",
+      "|  LevelII - LevelIV   |     0.308         0.328      |     0.378         0.271      |     0.425         0.182      |\n",
+      "|   LevelII - LevelV   |     0.245         0.245      |     0.399         0.099      |     0.430         0.125      |\n",
+      "|  LevelII - LevelVI   |     0.190         0.237      |     0.452         0.070      |     0.328         0.137      |\n",
+      "|  LevelIII - LevelIV  |     0.318         0.328      |     0.378         0.318      |     0.462         0.245      |\n",
+      "|  LevelIII - LevelV   |     0.280         0.262      |     0.484         0.131      |     0.409         0.149      |\n",
+      "|  LevelIII - LevelVI  |     0.220         0.237      |     0.484         0.078      |     0.318         0.149      |\n",
+      "|   LevelIV - LevelV   |     0.338         0.318      |     0.495         0.237      |     0.388         0.228      |\n",
+      "|  LevelIV - LevelVI   |     0.299         0.271      |     0.484         0.149      |     0.308         0.197      |\n",
+      "|   LevelV - LevelVI   |     0.409         0.338      |     0.495         0.357      |     0.338         0.347      |\n",
+      "+----------------------+------------------------------+------------------------------+------------------------------+\n"
      ]
     }
    ],
    "source": [
     "x = PrettyTable()\n",
-    "x.title = 'Wilcoxon Test on GaussBlur'\n",
-    "x.field_names = [\"Levels\",\"ATE p-value\",\"RPE rot p-value\"]\n",
+    "x.title = 'Wilcoxon Test on Gaussian Blur Effect'\n",
+    "x.field_names = [\" \",\"Model I\",\"Model II\",\"Model III\"]\n",
     "\n",
-    "for i in range(len(p_scores)):\n",
-    "     x.add_row([levels[i],p_scores[i],p_score_rpe[i]])\n",
+    "y = PrettyTable()\n",
+    "y.border = False\n",
+    "y.field_names = [\"ATE(mean)[m]\",\"Rot.RPE[deg]\"]\n",
+    "y.add_row([\"p-value\",\"p-value\"])\n",
+    "for i in range(len(p_scores[0])):\n",
+    "    y.add_row([p_scores[0][i],p_score_rpe[0][i]])\n",
+    "    \n",
+    "z = PrettyTable()\n",
+    "z.border = False\n",
+    "z.field_names = [\"ATE(mean)[m]\",\"Rot.RPE[deg]\"]\n",
+    "z.add_row([\"p-value\",\"p-value\"])\n",
+    "for i in range(len(p_scores[1])):\n",
+    "    z.add_row([p_scores[1][i],p_score_rpe[1][i]])\n",
+    "    \n",
+    "w = PrettyTable()\n",
+    "w.border = False\n",
+    "w.field_names = [\"ATE(mean)[m]\",\"Rot.RPE[deg]\"]\n",
+    "w.add_row([\"p-value\",\"p-value\"])\n",
+    "for i in range(len(p_scores[2])):\n",
+    "    w.add_row([p_scores[2][i],p_score_rpe[2][i]])\n",
     "\n",
+    "l = PrettyTable()\n",
+    "l.border = False\n",
+    "l.field_names = [\"Effect Levels\"]\n",
+    "l.add_row([\"\"])\n",
+    "for i in range(len(p_scores[2])):\n",
+    "    l.add_row([levels[i]])\n",
     "\n",
+    "x.add_row([l,y,z,w])\n",
     "print(x)"
    ]
   },
