--- a/fishEye_Wilcoxon_analysis.ipynb
+++ b/fishEye_Wilcoxon_analysis.ipynb
@@ -28,19 +28,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "level1_ATE=[0.2475,0.4787,0.4922,0.0987,0.2653,0.0796,0.3275,0.5253,0.5628,0.1244,0.1617,0.1099,0.1358,0.253,0.1223,0.2718,0.3672,0.0991,0.2334,0.3393]\n",
-    "level4_ATE=[0.2676,0.509,0.4831,0.1057,0.2805,0.1051,0.3504,0.5223,0.5704,0.127,0.1676,0.1894,0.1949,0.1211,0.1342,0.3123,0.3227,0.1023,0.2156,0.2595]\n",
-    "level6_ATE=[0.2733,0.5016,0.4286,0.1061,0.2914,0.1227,0.3519,0.5018,0.5572,0.1352,0.1927,0.2542,0.2149,0.1427,0.1395,0.3157,0.2963,0.1093,0.2104,0.2117]\n",
-    "level8_ATE=[0.2881,0.4877,0.353,0.1027,0.2733,0.1419,0.3284,0.449,0.5034,0.1428,0.2247,0.3131,0.2402,0.3072,0.1425,0.3002,0.2639,0.1149,0.199,0.1424]\n",
-    "level10_ATE=[0.2985,0.4591,0.3424,0.099,0.2429,0.1597,0.2812,0.388,0.4076,0.1596,0.2736,0.3997,0.316,0.4506,0.1474,0.2788,0.2678,0.1227,0.2061,0.1209]\n",
-    "level15_ATE=[0.315,0.3979,0.4131,0.1036,0.118,0.1855,0.2185,0.3542,0.2086,0.2247,0.386,0.5558,0.536,0.5947,0.155,0.2284,0.2935,0.1468,0.2081,0.2696]\n",
+    "model1_level1_ATE=[0.3154,0.3896,0.4542 ,0.1127,0.2382 ,0.3287,0.9449,1.2607,1.2163 ,0.9637,0.9789,1.1095,1.745,2.2019 ,0.3818,0.7902,1.005 ,0.2335,0.1858,0.7105]\n",
+    "model1_level2_ATE=[0.2869,0.385,0.505 ,0.129,0.3014, 0.3269,0.87,1.2628,1.2921 ,0.8648,1.1988,1.5216,1.0121,0.9506 ,0.3834,0.8242,0.9169 ,0.2393,0.2538,0.5117]\n",
+    "model1_level3_ATE=[0.1971,0.1766,0.1918 ,0.1355,0.286 ,0.3132,0.8361,1.2364,1.2854, 0.8131,1.0992,1.4143,2.2384,2.8412 ,0.3728,0.6445,0.7118 ,0.3252,0.4624,0.7914]\n",
+    "model1_level4_ATE=[0.1839,0.3139,0.3459, 0.1574,0.2818 ,0.2617,0.8,1.238,1.316, 0.7209,0.8993,0.8893,2.1554,3.0129 ,0.3092,0.41,0.3997 ,0.4296,0.7308,1.0983]\n",
+    "model1_level5_ATE=[0.2834,0.3608,0.3018 ,0.1548,0.1879, 0.1649,0.6872,1.0906,1.2181, 0.6586,0.814,0.9546,1.7665,2.2769, 0.2412,0.2917,0.2306 ,0.4738,0.8057,1.1461]\n",
+    "model1_level6_ATE=[0.2596,0.4484,0.5647,0.1467,0.1953,0.226,0.8449,0.9509,0.8249,0.33,0.3007,0.2511,0.9359,1.2005,0.1613,0.2253,0.2545,0.3412,0.5194,0.4174]\n",
     "\n",
-    "level1_RPE_rot=[1.3443,1.1212,1.0103,1.1422,0.8566,1.0018,1.131,0.9873,1.0004,1.0526,1.0996,1.0962,1.0898,1.0609,1.135,1.3238,1.0577,1.0144,0.9449,0.9064]\n",
-    "level4_RPE_rot=[1.343,1.1568,1.0626,1.216,0.9333,1.1079,1.1707,1.0595,1.0995,1.1336,1.2464,1.2294,1.1788,1.1253,1.1947,1.3712,1.0831,1.0771,0.9876,0.9718]\n",
-    "level6_RPE_rot=[1.3202,1.185,1.1008,1.2464,0.9756,1.1536,1.1763,1.1039,1.1598,1.1643,1.3198,1.2823,1.2057,1.1544,1.246,1.393,1.1081,1.0988,1.0027,1.0008]\n",
-    "level8_RPE_rot=[1.2628,1.2,1.1542,1.2662,0.9818,1.1754,1.202,1.1341,1.207,1.1797,1.3746,1.3234,1.2416,1.1837,1.2599,1.4204,1.1266,1.1111,1.002,1.0336]\n",
-    "level10_RPE_rot=[1.2327,1.2131,1.1737,1.2604,0.9722,1.1607,1.2682,1.1471,1.201,1.168,1.4104,1.3312,1.2479,1.1958,1.2675,1.4317,1.1299,1.124,1.017,1.0743]\n",
-    "level15_RPE_rot=[1.1514,1.1448,1.1273,1.1622,0.9646,1.0742,1.2298,1.1512,1.0593,1.1105,1.3714,1.221,1.1538,1.1315,1.1906,1.3607,1.1396,1.1001,1.0353,1.0045]"
+    "model1_level1_RPE_rot=[6.7563,6.4159,5.6445 ,4.6387,4.0822, 5.2388,6.5506,4.5587,4.5494 ,4.1933,3.6525,4.2565,5.4672,4.5792 ,4.2978,5.6236,5.1281 ,3.9275,5.0789,4.2883]\n",
+    "model1_level2_RPE_rot=[7.2238,6.681,6.01 ,4.7304,4.0798 ,5.4181,6.5408,4.7745,4.7631 ,4.5777,4.0135,4.4477,5.7175,4.7216 ,4.6843,6.088,5.1647 ,4.106,5.4229,4.6135]\n",
+    "model1_level3_RPE_rot=[6.2206,5.9706,5.0737 ,4.835,4.1518, 5.517,6.5098,4.8424,4.9028 ,4.6212,4.2144,4.5812,5.7916,4.7857 ,4.8896,6.2919,5.2291 ,4.2177,5.6219,4.6924]\n",
+    "model1_level4_RPE_rot=[6.3695,6.1048,5.2923 ,5.0128,4.2991, 5.5818,6.5818,4.9598,5.0678 ,4.7205,4.4219,4.7992,5.8611,4.9102 ,5.1493,6.4097,5.3606 ,4.2978,5.7515,4.8661]\n",
+    "model1_level5_RPE_rot=[6.6123,6.2987,5.5636 ,5.2753,4.5329, 5.5571,6.6671,5.0446,5.2297 ,4.9409,4.6272,5.0421,6.2948,5.0397 ,5.3837,6.6307,5.5019 ,4.4102,5.8836,4.9718]\n",
+    "model1_level6_RPE_rot=[7.2896,6.867,6.1861,6.3041,5.6107,5.8087,6.7886,5.8448,5.8345,5.3911,5.7614,5.9233,6.3256,5.7794,6.2056,6.939,5.7492,5.1705,6.2351,5.7658]\n",
+    "\n",
+    "model2_level1_ATE=[0.2475,0.4787,0.4922,0.0987,0.2653,0.0796,0.3275,0.5253,0.5628,0.1244,0.1617,0.1099,0.1358,0.253,0.1223,0.2718,0.3672,0.0991,0.2334,0.3393]\n",
+    "model2_level2_ATE=[0.2676,0.509,0.4831,0.1057,0.2805,0.1051,0.3504,0.5223,0.5704,0.127,0.1676,0.1894,0.1949,0.1211,0.1342,0.3123,0.3227,0.1023,0.2156,0.2595]\n",
+    "model2_level3_ATE=[0.2733,0.5016,0.4286,0.1061,0.2914,0.1227,0.3519,0.5018,0.5572,0.1352,0.1927,0.2542,0.2149,0.1427,0.1395,0.3157,0.2963,0.1093,0.2104,0.2117]\n",
+    "model2_level4_ATE=[0.2881,0.4877,0.353,0.1027,0.2733,0.1419,0.3284,0.449,0.5034,0.1428,0.2247,0.3131,0.2402,0.3072,0.1425,0.3002,0.2639,0.1149,0.199,0.1424]\n",
+    "model2_level5_ATE=[0.2985,0.4591,0.3424,0.099,0.2429,0.1597,0.2812,0.388,0.4076,0.1596,0.2736,0.3997,0.316,0.4506,0.1474,0.2788,0.2678,0.1227,0.2061,0.1209]\n",
+    "model2_level6_ATE=[0.315,0.3979,0.4131,0.1036,0.118,0.1855,0.2185,0.3542,0.2086,0.2247,0.386,0.5558,0.536,0.5947,0.155,0.2284,0.2935,0.1468,0.2081,0.2696]\n",
+    "\n",
+    "model2_level1_RPE_rot=[1.3443,1.1212,1.0103,1.1422,0.8566,1.0018,1.131,0.9873,1.0004,1.0526,1.0996,1.0962,1.0898,1.0609,1.135,1.3238,1.0577,1.0144,0.9449,0.9064]\n",
+    "model2_level2_RPE_rot=[1.343,1.1568,1.0626,1.216,0.9333,1.1079,1.1707,1.0595,1.0995,1.1336,1.2464,1.2294,1.1788,1.1253,1.1947,1.3712,1.0831,1.0771,0.9876,0.9718]\n",
+    "model2_level3_RPE_rot=[1.3202,1.185,1.1008,1.2464,0.9756,1.1536,1.1763,1.1039,1.1598,1.1643,1.3198,1.2823,1.2057,1.1544,1.246,1.393,1.1081,1.0988,1.0027,1.0008]\n",
+    "model2_level4_RPE_rot=[1.2628,1.2,1.1542,1.2662,0.9818,1.1754,1.202,1.1341,1.207,1.1797,1.3746,1.3234,1.2416,1.1837,1.2599,1.4204,1.1266,1.1111,1.002,1.0336]\n",
+    "model2_level5_RPE_rot=[1.2327,1.2131,1.1737,1.2604,0.9722,1.1607,1.2682,1.1471,1.201,1.168,1.4104,1.3312,1.2479,1.1958,1.2675,1.4317,1.1299,1.124,1.017,1.0743]\n",
+    "model2_level6_RPE_rot=[1.1514,1.1448,1.1273,1.1622,0.9646,1.0742,1.2298,1.1512,1.0593,1.1105,1.3714,1.221,1.1538,1.1315,1.1906,1.3607,1.1396,1.1001,1.0353,1.0045]\n",
+    "\n",
+    "model3_level1_ATE=[0.2508,0.4042,0.4806,0.1323,0.1535,0.2286,0.4248,0.6532,0.7283,1.033,0.6801,1.0778,1.3539,2.0009,0.5702,1.0023,0.9783,0.1897,0.2243,0.5537]\n",
+    "model3_level2_ATE=[0.2426,0.3638,0.5131,0.1421,0.1899,0.2242,0.4807,0.709,0.7891,0.8567,1.1042,1.5201,2.6028,3.504,0.5337,0.8795,0.9213,0.1548,0.2295,0.4784]\n",
+    "model3_level3_ATE=[0.2365,0.3512,0.4189,0.1459,0.2073,0.217,0.4253,0.5142,0.586,0.8242,0.9043,1.1869,2.5873,3.3963,0.5118,0.6845,0.8034,0.1675,0.3328,0.5165]\n",
+    "model3_level4_ATE=[0.3197,0.4168,0.3642,0.1545,0.2242,0.1796,0.3331,0.402,0.3691,0.8325,0.4194,0.4157,1.3522,1.7754,0.3835,0.4399,0.4391,0.2565,0.5324,1.0016]\n",
+    "model3_level5_ATE=[0.4086,0.4848,0.3859,0.1597,0.1547,0.1455,0.2383,0.3593,0.4509,0.8149,0.9007,0.9076,1.9415,2.3256,0.2484,0.318,0.3536,0.3224,0.625,1.3251]\n",
+    "model3_level6_ATE=[0.6822,0.8282,0.8664,0.1431,0.2129,0.1439,0.1487,0.218,0.3181,0.7203,0.8816,0.9213,1.4333,2.0717,0.1348,0.2219,0.2987,0.3502,0.5428,0.5825]\n",
+    "\n",
+    "model3_level1_RPE_rot=[6.0444,6.0735,4.7756,47866,4.0384,4.6719,6.6155,4.5802,4.6868,4.0586,4.4506,4.5887,6.5144,4.4525,4.5981,5.6736,4.9133,4.0585,5.0691,4.4412]\n",
+    "model3_level2_RPE_rot=[6.1255,6.2794,5.0707,4.9918,4.2326,4.8178,6.5293,4.8145,4.8989,4.4842,4.6285,4.7517,6.5947,4.7179,4.943,6.002,5.2685,4.2503,5.2927,4.8126]\n",
+    "model3_level3_RPE_rot=[6.2554,6.3667,5.2151,5.0947,43433,4.929,6.5706,4.9522,5.0359,4.5877,4.8047,4.8736,6.5703,4.8384,5.1007,6.2977,5.4089,4.3429,5.461,4.9984]\n",
+    "model3_level4_RPE_rot=[6.4331,6.5229,5.4266,5.2825,4.4983,5.0047,6.5734,5.044,5.0902,4.8072,4.9722,5.0836,6.602,5.067,5.2039,6.5643,5.5923,4.4398,5.5974,5.1685]\n",
+    "model3_level5_RPE_rot=[6.5995,6.618,5.7064,5.506,4.6711,5.1018,6.614,5.1225,5.1832,4.943,5.1033,5.3272,6.4414,5.2799,5.2781,6.7224,5.88,4.5443,5.7651,5.3602]\n",
+    "model3_level6_RPE_rot=[7.2826,6.6533,6.0205,5.9309,5.2114,5.1229,6.138,5.5088,5.2585,5.1529,5.8039,5.9925,6.736,5.8697,5.4779,6.8077,6.0505,4.8608,5.9147,5.4268]"
    ]
   },
   {
@@ -50,23 +78,22 @@
    "outputs": [],
    "source": [
     "# compare samples\n",
-    "levels_ATE=[level1_ATE,level4_ATE,level6_ATE,level8_ATE,level10_ATE,level15_ATE]\n",
-    "names=[\"Level1\",\"Level4\",\"Level6\",\"Level8\",\"Level10\",\"Level15\"]\n",
-    "levels_RPE_rot=[level1_RPE_rot,level4_RPE_rot,level6_RPE_rot,level8_RPE_rot,level10_RPE_rot,level15_RPE_rot]\n",
+    "levels_ATE=[[model1_level1_ATE,model1_level2_ATE,model1_level3_ATE,model1_level4_ATE,model1_level5_ATE,model1_level6_ATE],[model2_level1_ATE,model2_level2_ATE,model2_level3_ATE,model2_level4_ATE,model2_level5_ATE,model2_level6_ATE],[model3_level1_ATE,model3_level2_ATE,model3_level3_ATE,model3_level4_ATE,model3_level5_ATE,model3_level6_ATE]]\n",
+    "names=[\"I\",\"II\",\"III\",\"IV\",\"V\",\"VI\"]\n",
+    "levels_RPE_rot=[[model1_level1_RPE_rot,model1_level2_RPE_rot,model1_level3_RPE_rot,model1_level4_RPE_rot,model1_level5_RPE_rot,model1_level6_RPE_rot],[model2_level1_RPE_rot,model2_level2_RPE_rot,model2_level3_RPE_rot,model2_level4_RPE_rot,model2_level5_RPE_rot,model2_level6_RPE_rot],[model3_level1_RPE_rot,model3_level2_RPE_rot,model3_level3_RPE_rot,model3_level4_RPE_rot,model3_level5_RPE_rot,model3_level6_RPE_rot]]\n",
     "\n",
-    "p_scores=[]\n",
-    "p_score_rpe=[]\n",
+    "p_scores=[[],[],[]]\n",
+    "p_score_rpe=[[],[],[]]\n",
     "levels=[]\n",
+    "for model in range(0,3):\n",
+    "    for i in range(0,5):\n",
+    "        for j in range(i+1,6):\n",
+    "            stat, p = mannwhitneyu(levels_ATE[model][i], levels_ATE[model][j])\n",
+    "            p_scores[model].append('{:.3f}'.format(p))\n",
+    "            levels.append(\"Level\"+names[i]+\" - \"+\"Level\"+names[j])\n",
     "\n",
-    "for i in range(0,5):\n",
-    "    for j in range(i+1,6):\n",
-    "        stat, p = mannwhitneyu(levels_ATE[i], levels_ATE[j])\n",
-    "        p_scores.append('{:.3f}'.format(p))\n",
-    "        levels.append(names[i]+\" - \"+names[j])\n",
-    "        \n",
-    "        stat2, p2 = mannwhitneyu(levels_RPE_rot[i], levels_RPE_rot[j])\n",
-    "        p_score_rpe.append('{:.3f}'.format(p2))\n",
-    "        "
+    "            stat2, p2 = mannwhitneyu(levels_RPE_rot[model][i], levels_RPE_rot[model][j])\n",
+    "            p_score_rpe[model].append('{:.3f}'.format(p2))\n"
    ]
   },
   {
@@ -78,41 +105,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+---------------------------------------------------+\n",
-      "|              Wilcoxon Test on FishEye             |\n",
-      "+-------------------+-------------+-----------------+\n",
-      "|       Levels      | ATE p-value | RPE rot p-value |\n",
-      "+-------------------+-------------+-----------------+\n",
-      "|  Level1 - Level4  |    0.430    |      0.022      |\n",
-      "|  Level1 - Level6  |    0.378    |      0.002      |\n",
-      "|  Level1 - Level8  |    0.338    |      0.001      |\n",
-      "|  Level1 - Level10 |    0.290    |      0.000      |\n",
-      "|  Level1 - Level15 |    0.228    |      0.004      |\n",
-      "|  Level4 - Level6  |    0.399    |      0.165      |\n",
-      "|  Level4 - Level8  |    0.357    |      0.043      |\n",
-      "|  Level4 - Level10 |    0.347    |      0.032      |\n",
-      "|  Level4 - Level15 |    0.197    |      0.452      |\n",
-      "|  Level6 - Level8  |    0.393    |      0.212      |\n",
-      "|  Level6 - Level10 |    0.373    |      0.168      |\n",
-      "|  Level6 - Level15 |    0.262    |      0.155      |\n",
-      "|  Level8 - Level10 |    0.388    |      0.420      |\n",
-      "|  Level8 - Level15 |    0.276    |      0.043      |\n",
-      "| Level10 - Level15 |    0.420    |      0.023      |\n",
-      "+-------------------+-------------+-----------------+\n"
+      "+-------------------------------------------------------------------------------------------------------------------+\n",
+      "|                                          Wilcoxon Test on Fish-Eye Effect                                         |\n",
+      "+----------------------+------------------------------+------------------------------+------------------------------+\n",
+      "|                      |           Model I            |           Model II           |          Model III           |\n",
+      "+----------------------+------------------------------+------------------------------+------------------------------+\n",
+      "|    Effect Levels     |  ATE(mean)[m]  Rot.RPE[deg]  |  ATE(mean)[m]  Rot.RPE[deg]  |  ATE(mean)[m]  Rot.RPE[deg]  |\n",
+      "|                      |    p-value       p-value     |    p-value       p-value     |    p-value       p-value     |\n",
+      "|   LevelI - LevelII   |     0.452         0.162      |     0.430         0.022      |     0.441         0.120      |\n",
+      "|  LevelI - LevelIII   |     0.441         0.162      |     0.378         0.002      |     0.420         0.023      |\n",
+      "|   LevelI - LevelIV   |     0.399         0.062      |     0.338         0.001      |     0.149         0.023      |\n",
+      "|   LevelI - LevelV    |     0.262         0.025      |     0.290         0.000      |     0.290         0.008      |\n",
+      "|   LevelI - LevelVI   |     0.032         0.000      |     0.228         0.004      |     0.228         0.002      |\n",
+      "|  LevelII - LevelIII  |     0.420         0.357      |     0.399         0.165      |     0.357         0.074      |\n",
+      "|  LevelII - LevelIV   |     0.462         0.212      |     0.357         0.043      |     0.152         0.045      |\n",
+      "|   LevelII - LevelV   |     0.262         0.095      |     0.347         0.032      |     0.262         0.011      |\n",
+      "|  LevelII - LevelVI   |     0.036         0.001      |     0.197         0.452      |     0.193         0.002      |\n",
+      "|  LevelIII - LevelIV  |     0.495         0.190      |     0.393         0.212      |     0.228         0.299      |\n",
+      "|  LevelIII - LevelV   |     0.318         0.054      |     0.373         0.168      |     0.328         0.090      |\n",
+      "|  LevelIII - LevelVI  |     0.082         0.000      |     0.262         0.155      |     0.299         0.018      |\n",
+      "|   LevelIV - LevelV   |     0.308         0.182      |     0.388         0.420      |     0.484         0.125      |\n",
+      "|  LevelIV - LevelVI   |     0.054         0.000      |     0.276         0.043      |     0.399         0.014      |\n",
+      "|   LevelV - LevelVI   |     0.137         0.002      |     0.420         0.023      |     0.308         0.057      |\n",
+      "+----------------------+------------------------------+------------------------------+------------------------------+\n"
      ]
     }
    ],
    "source": [
     "x = PrettyTable()\n",
-    "x.title = 'Wilcoxon Test on FishEye'\n",
-    "x.field_names = [\"Levels\",\"ATE p-value\",\"RPE rot p-value\"]\n",
+    "x.title = 'Wilcoxon Test on Fish-Eye Effect'\n",
+    "x.field_names = [\" \",\"Model I\",\"Model II\",\"Model III\"]\n",
     "\n",
-    "for i in range(len(p_scores)):\n",
-    "     x.add_row([levels[i],p_scores[i],p_score_rpe[i]])\n",
+    "y = PrettyTable()\n",
+    "y.border = False\n",
+    "y.field_names = [\"ATE(mean)[m]\",\"Rot.RPE[deg]\"]\n",
+    "y.add_row([\"p-value\",\"p-value\"])\n",
+    "for i in range(len(p_scores[0])):\n",
+    "    y.add_row([p_scores[0][i],p_score_rpe[0][i]])\n",
+    "    \n",
+    "z = PrettyTable()\n",
+    "z.border = False\n",
+    "z.field_names = [\"ATE(mean)[m]\",\"Rot.RPE[deg]\"]\n",
+    "z.add_row([\"p-value\",\"p-value\"])\n",
+    "for i in range(len(p_scores[1])):\n",
+    "    z.add_row([p_scores[1][i],p_score_rpe[1][i]])\n",
+    "    \n",
+    "w = PrettyTable()\n",
+    "w.border = False\n",
+    "w.field_names = [\"ATE(mean)[m]\",\"Rot.RPE[deg]\"]\n",
+    "w.add_row([\"p-value\",\"p-value\"])\n",
+    "for i in range(len(p_scores[2])):\n",
+    "    w.add_row([p_scores[2][i],p_score_rpe[2][i]])\n",
     "\n",
+    "l = PrettyTable()\n",
+    "l.border = False\n",
+    "l.field_names = [\"Effect Levels\"]\n",
+    "l.add_row([\"\"])\n",
+    "for i in range(len(p_scores[2])):\n",
+    "    l.add_row([levels[i]])\n",
     "\n",
+    "x.add_row([l,y,z,w])\n",
     "print(x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
